--- a/CRUD.ipynb
+++ b/CRUD.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fb0ff79b",
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -25,20 +29,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bd7b296f",
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "var cstring = \"AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
     "var client = new CosmosClient(cstring);\n",
-    "var db = client.GetDatabase(\"Stackoverflow\");\n",
+    "var db = client.GetDatabase(\"StackOverflow\");\n",
     "var postContainer = db.GetContainer(\"Posts\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d70f6866",
    "metadata": {
     "polyglot_notebook": {
@@ -78,10 +86,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8f0952b2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created item in database with id: 278efb3e-5d05-408f-84a9-ad7331fce75d\n",
+      "Request charge: 11.05\n"
+     ]
+    }
+   ],
    "source": [
     "var newpost = new Post\n",
     "{\n",
@@ -103,7 +124,7 @@
     "    Tags = \"CosmosDB,Azure,Database\"    \n",
     "};\n",
     "\n",
-    "var newitem = await postContainer.CreateItemAsync(newpost, new PartitionKey(newpost.id));\n",
+    "var newitem = await postContainer.CreateItemAsync(newpost, new PartitionKey(newpost.OwnerUserId));\n",
     "Console.WriteLine($\"Created item in database with id: {newitem.Resource.id}\");\n",
     "Console.WriteLine($\"Request charge: {newitem.RequestCharge}\");\n",
     "\n"
@@ -119,16 +140,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2f7a4d6e",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Request charge: 2.92\r\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<details open=\"open\" class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Submission#6+Post</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>id</td><td><div class=\"dni-plaintext\"><pre>278efb3e-5d05-408f-84a9-ad7331fce75d</pre></div></td></tr><tr><td>PostId</td><td><div class=\"dni-plaintext\"><pre>-10</pre></div></td></tr><tr><td>PostBody</td><td><div class=\"dni-plaintext\"><pre>Can anyone help me with creating a new record in a Cosmos DB container using C#?</pre></div></td></tr><tr><td>Title</td><td><div class=\"dni-plaintext\"><pre>How to create a new record in a Cosmos DB container?</pre></div></td></tr><tr><td>ViewCount</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>AnswerCount</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>CommentCount</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>FavoriteCount</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>AcceptedAnswerId</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>CreatedOn</td><td><span>2025-04-13 02:10:32Z</span></td></tr><tr><td>ClosedDate</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>OwnerUserId</td><td><div class=\"dni-plaintext\"><pre>-10</pre></div></td></tr><tr><td>OwnerDisplayName</td><td><div class=\"dni-plaintext\"><pre>Test User</pre></div></td></tr><tr><td>PostType</td><td><div class=\"dni-plaintext\"><pre>Question</pre></div></td></tr><tr><td>Score</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>Tags</td><td><div class=\"dni-plaintext\"><pre>CosmosDB,Azure,Database</pre></div></td></tr></tbody></table></div></details><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "var postid = newitem.Resource.PostId;\n",
+    "var id = newitem.Resource.id;\n",
     "var userid = newitem.Resource.OwnerUserId;\n",
     "\n",
-    "var postQuery = new QueryDefinition(\"SELECT * FROM c WHERE c.PostId = @postid AND c.OwnerUserId = @userid\")\n",
-    "    .WithParameter(\"@postid\", postid)\n",
+    "var postQuery = new QueryDefinition(\"SELECT * FROM c WHERE c.id = @id AND c.OwnerUserId = @userid\")\n",
+    "    .WithParameter(\"@id\", id)\n",
     "    .WithParameter(\"@userid\", userid);\n",
     "var iterator = postContainer.GetItemQueryIterator<Post>(postQuery);\n",
     "var results = new List<Post>();\n",
@@ -136,7 +209,9 @@
     "{\n",
     "    var response = await iterator.ReadNextAsync();\n",
     "    results.AddRange(response);\n",
+    "    Console.WriteLine($\"Request charge: {response.RequestCharge}\");\n",
     "}\n",
+    "\n",
     "results[0].Display();\n",
     "\n",
     "\n"
@@ -154,12 +229,64 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c8badb8d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<details open=\"open\" class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>Submission#6+Post</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>id</td><td><div class=\"dni-plaintext\"><pre>278efb3e-5d05-408f-84a9-ad7331fce75d</pre></div></td></tr><tr><td>PostId</td><td><div class=\"dni-plaintext\"><pre>-10</pre></div></td></tr><tr><td>PostBody</td><td><div class=\"dni-plaintext\"><pre>Can anyone help me with creating a new record in a Cosmos DB container using C#?</pre></div></td></tr><tr><td>Title</td><td><div class=\"dni-plaintext\"><pre>How to create a new record in a Cosmos DB container?</pre></div></td></tr><tr><td>ViewCount</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>AnswerCount</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>CommentCount</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>FavoriteCount</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>AcceptedAnswerId</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>CreatedOn</td><td><span>2025-04-13 02:10:32Z</span></td></tr><tr><td>ClosedDate</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>OwnerUserId</td><td><div class=\"dni-plaintext\"><pre>-10</pre></div></td></tr><tr><td>OwnerDisplayName</td><td><div class=\"dni-plaintext\"><pre>Test User</pre></div></td></tr><tr><td>PostType</td><td><div class=\"dni-plaintext\"><pre>Question</pre></div></td></tr><tr><td>Score</td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr><tr><td>Tags</td><td><div class=\"dni-plaintext\"><pre>CosmosDB,Azure,Database</pre></div></td></tr></tbody></table></div></details><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Request charge: 1\r\n"
+     ]
+    }
+   ],
    "source": [
-    "var post = await postContainer.ReadItemAsync<Post>(postid, new PartitionKey(userid.ToString()));\n",
-    "post.Resource.Display();\n",
-    "Console.WriteLine($\"Request charge: {post.RequestCharge}\");"
+    "var post = await postContainer.ReadItemAsync<Post>(id, new PartitionKey(userid));\n",
+    "Console.WriteLine($\"Request charge: {post.RequestCharge}\");\n",
+    "post.Resource.Display();"
    ]
   },
   {
@@ -172,13 +299,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7c32f6c3",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "System.ArgumentOutOfRangeException: Index was out of range. Must be non-negative and less than the size of the collection. (Parameter 'index')\r\n   at System.Collections.Generic.List`1.get_Item(Int32 index)\r\n   at Submission#14.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "output_type": "error",
+     "traceback": [
+      "System.ArgumentOutOfRangeException: Index was out of range. Must be non-negative and less than the size of the collection. (Parameter 'index')\r\n",
+      "   at System.Collections.Generic.List`1.get_Item(Int32 index)\r\n",
+      "   at Submission#14.<<Initialize>>d__0.MoveNext()\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
+     ]
+    }
+   ],
    "source": [
     "var query = new QueryDefinition(\"SELECT * FROM c WHERE c.PostId = @postId\")\n",
-    "    .WithParameter(\"@postId\", -1);\n",
+    "    .WithParameter(\"@postId\", 10);\n",
     "var iterator = postContainer.GetItemQueryIterator<Post>(query);\n",
     "var results = new List<Post>();\n",
     "while (iterator.HasMoreResults)\n",
@@ -191,7 +335,7 @@
     "results[0].AnswerCount += 1;\n",
     "results[0].Score += 10;\n",
     "//Figure out the partition key\n",
-    "var updateResponse = await postContainer.ReplaceItemAsync(results[0], results[0].id, new PartitionKey(results[0].id));\n",
+    "var updateResponse = await postContainer.ReplaceItemAsync(results[0], results[0].id, new PartitionKey(results[0].OwnerUserId));\n",
     "updateResponse.Resource.Display();\n",
     "Console.WriteLine($\"Request charge: {updateResponse.RequestCharge}\");"
    ]
@@ -209,7 +353,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "791e2c3a",
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "var _id = \"20\";\n",
@@ -243,7 +391,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "99bbd419",
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "var query = new QueryDefinition(\"SELECT * FROM c WHERE c.PostId = @postId\")\n",
@@ -275,7 +427,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ebf63f0a",
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "var id = results[0].id;\n",
