--- a/Indexing.ipynb
+++ b/Indexing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "314ac3ee",
    "metadata": {
     "polyglot_notebook": {
@@ -24,7 +24,8 @@
     "#r \"nuget: Newtonsoft.Json\"\n",
     "#r \"nuget: Microsoft.Azure.Cosmos\"\n",
     "using Microsoft.Azure.Cosmos;\n",
-    "using System.Net.Http;"
+    "using System.Net.Http;\n",
+    "using System.Collections.ObjectModel;"
    ]
   },
   {
@@ -53,7 +54,95 @@
    },
    "outputs": [],
    "source": [
-    "postContainer.Resource.IndexingPolicy.IndexingMode = IndexingMode.None;\n"
+    "string sqlQueryText = \"SELECT TOP 10 c.id FROM c WHERE c.Item = 'value1234' AND c.Price > 2\";\n",
+    "\n",
+    "QueryDefinition query = new QueryDefinition(sqlQueryText);\n",
+    "var resultSetIterator = postContainer.GetItemQueryIterator<Item>(\n",
+    "                query, requestOptions: new QueryRequestOptions\n",
+    "        {\n",
+    "            PopulateIndexMetrics = true\n",
+    "        });\n",
+    "\n",
+    "    FeedResponse<Item> response = null;\n",
+    "\n",
+    "    while (resultSetIterator.HasMoreResults)\n",
+    "        {\n",
+    "          response = await resultSetIterator.ReadNextAsync();\n",
+    "          Console.WriteLine(response.IndexMetrics);\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "postContainer.Resource.IndexingPolicy.IndexingMode = IndexingMode.None;\n",
+    "\n",
+    "postContainer.Resource.IndexingPolicy.IncludedPaths.Add(new IncludedPath { Path = \"/*\" });\n",
+    "\n",
+    "postContainer.Resource.IndexingPolicy.ExcludedPaths.Add(new ExcludedPath { Path = \"/name/*\" });\n",
+    "\n",
+    "postContainer.Resource.IndexingPolicy.CompositeIndexes.Add(new Collection<CompositePath> { \n",
+    "    new CompositePath() { Path = \"/name\", Order = CompositePathSortOrder.Ascending }, \n",
+    "    new CompositePath() { Path = \"/age\", Order = CompositePathSortOrder.Descending }\n",
+    "    });\n",
+    "\n",
+    "SpatialPath spatialPath = new SpatialPath\n",
+    "{\n",
+    "    Path = \"/locations/*\"\n",
+    "};\n",
+    "spatialPath.SpatialTypes.Add(SpatialType.Point);\n",
+    "postContainer.Resource.IndexingPolicy.SpatialIndexes.Add(spatialPath);\n",
+    "\n",
+    "await db.GetContainer(\"Posts\").ReplaceContainerAsync(postContainer.Resource);\n",
+    "\n",
+    "// retrieve the container's details\n",
+    "ContainerResponse containerResponse = await db.GetContainer(\"Posts\").ReadContainerAsync(new ContainerRequestOptions { PopulateQuotaInfo = true });\n",
+    "// retrieve the index transformation progress from the result\n",
+    "long indexTransformationProgress = long.Parse(containerResponse.Headers[\"x-ms-documentdb-collection-index-transformation-progress\"]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db6bb45b",
+   "metadata": {},
+   "source": [
+    "V3 Fluent API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "await client.GetDatabase(\"database\").DefineContainer(name: \"container\", partitionKeyPath: \"/myPartitionKey\")\n",
+    "    .WithIndexingPolicy()\n",
+    "        .WithIncludedPaths()\n",
+    "            .Path(\"/*\")\n",
+    "        .Attach()\n",
+    "        .WithExcludedPaths()\n",
+    "            .Path(\"/name/*\")\n",
+    "        .Attach()\n",
+    "        .WithSpatialIndex()\n",
+    "            .Path(\"/locations/*\", SpatialType.Point)\n",
+    "        .Attach()\n",
+    "        .WithCompositeIndex()\n",
+    "            .Path(\"/name\", CompositePathSortOrder.Ascending)\n",
+    "            .Path(\"/age\", CompositePathSortOrder.Descending)\n",
+    "        .Attach()\n",
+    "    .Attach()\n",
+    "    .CreateIfNotExistsAsync();"
    ]
   }
  ],
