--- a/Caching.ipynb
+++ b/Caching.ipynb
@@ -21,8 +21,8 @@
    "execution_count": null,
    "id": "e5ed42ca",
    "metadata": {
-    "vscode": {
-     "languageId": "polyglot-notebook"
+    "polyglot_notebook": {
+     "kernelName": "csharp"
     }
    },
    "outputs": [],
@@ -52,7 +52,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d82d8a0b",
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "var cstring = \"AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
@@ -68,7 +72,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "097b7c35",
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "var cmd = new QueryDefinition(\"SELECT * FROM c WHERE c.OwnerUserId = @id\")\n",
