--- a/Indexing.ipynb
+++ b/Indexing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "314ac3ee",
    "metadata": {
     "polyglot_notebook": {
@@ -13,7 +13,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.48.1</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.49.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -41,7 +41,8 @@
     "var cstring = \"AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
     "var client = new CosmosClient(cstring);\n",
     "var db = client.GetDatabase(\"StackOverflow\");\n",
-    "var postContainer = await db.GetContainer(\"Posts\").ReadContainerAsync();"
+    "var postContainer = await db.GetContainer(\"Posts2\").ReadContainerAsync();\n",
+    "//await db.CreateContainerIfNotExistsAsync(\"Posts2\",\"/OwnerUserId\", 4000);"
    ]
   },
   {
