--- a/Query.ipynb
+++ b/Query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "62ea5f82",
    "metadata": {
     "polyglot_notebook": {
@@ -13,7 +13,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.48.1</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.49.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -25,12 +25,13 @@
     "#r \"nuget: Microsoft.Azure.Cosmos\"\n",
     "using Microsoft.Azure.Cosmos;\n",
     "using System.Net.Http;\n",
-    "using Newtonsoft.Json;\n"
+    "using Newtonsoft.Json;\n",
+    "using System.Collections.ObjectModel;\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "19844e86",
    "metadata": {
     "polyglot_notebook": {
@@ -40,14 +41,15 @@
    "outputs": [],
    "source": [
     "var cstring = \"AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
-    "var client = new CosmosClient(cstring);\n",
+    "client = new CosmosClient(cstring, new CosmosClientOptions() {AllowBulkExecution = true});\n",
     "var db = client.GetDatabase(\"StackOverflow\");\n",
-    "var postContainer = db.GetContainer(\"Posts2\");"
+    "ContainerProperties props = new ContainerProperties(\"Posts3\", \"/OwnerUserId\");\n",
+    "var postContainer = await db.CreateContainerIfNotExistsAsync(props, throughput: 4000);\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "c56c7a2d",
    "metadata": {
     "polyglot_notebook": {
@@ -74,12 +76,13 @@
     "    public string PostType { get; set; }\n",
     "    public int Score { get; set; }\n",
     "    public string Tags { get; set; }\n",
+    "    public float[] bodyvector {get;set;}\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "8c420709",
    "metadata": {
     "polyglot_notebook": {
@@ -136,10 +139,9 @@
     "var postList = JsonConvert.DeserializeObject<List<Post>>(json);\n",
     "postList.Count.Display(); // Display the number of posts\n",
     "//write the post to the container in bulk mode\n",
-    "client = new CosmosClient(cstring, new CosmosClientOptions() {AllowBulkExecution = true});\n",
-    "Container postContainer = client.GetContainer(\"StackOverflow\", \"Posts2\");\n",
+    "var postContainer = db.GetContainer(\"Posts3\");\n",
     "foreach (var post in postList)\n",
-    "{\n",
+    "{        \n",
     "    var response = await postContainer.CreateItemAsync(post, new PartitionKey(post.OwnerUserId));\n",
     "    //response.StatusCode.Display(); // Display the status code of the response\n",
     "}"
