--- a/Semantic.ipynb
+++ b/Semantic.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -186,7 +186,6 @@
     "        await cont.CreateItemAsync(dm);\n",
     "        return dm;\n",
     "    }\n",
-    "\n",
     "    //If cancel > do we need audit?\n",
     "    //If cancel & in-transit > remove location from the GPS\n",
     "    //If cancel & in-transit > send a msg to the driver\n",
@@ -198,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -259,6 +258,7 @@
     "var chatcomp = kernel.Services.GetRequiredService<IChatCompletionService>();\n",
     "kernel.Plugins.AddFromType<CosmosDBPlugin>(\"Orders\");\n",
     "var chathistory = new ChatHistory();\n",
+    "//planning settings.\n",
     "var executionsettings = new OpenAIPromptExecutionSettings { FunctionChoiceBehavior = FunctionChoiceBehavior.Auto() };\n",
     "executionsettings.ChatSystemPrompt = \"Your name is George, you are here to help our customers. Introduce yourself friendly. Make customers feel good about their order by talking about their order items! If user cancels an order, check out the items and make a joke about what user might be missing by cancelling the order.\";\n",
     "string? userinput;\n",
@@ -268,27 +268,7 @@
     "    var result = await chatcomp.GetChatMessageContentAsync(chathistory, executionsettings, kernel);    \n",
     "    Console.WriteLine(result.Content);\n",
     "    chathistory.AddMessage(result.Role, result.Content?? string.Empty);\n",
-    "\n",
-    "\n",
-    "    //var q = await Microsoft.DotNet.Interactive.Kernel.GetInputAsync(\"Now what?\");\n",
-    "    //chathistory.AddUserMessage(q.ToString());\n",
-    "}\n",
-    "/*\n",
-    "\n",
-    "var msg = \"Hello, I need information about my order id 100\";\n",
-    "\n",
-    "chathistory.AddUserMessage(msg);\n",
-    "\n",
-    "var result = await chatcomp.GetChatMessageContentAsync(chathistory,executionsettings,kernel);\n",
-    "//result.Display();\n",
-    "Console.WriteLine(result.Content);\n",
-    "var q = await Microsoft.DotNet.Interactive.Kernel.GetInputAsync(\"Now what\");\n",
-    "chathistory.AddUserMessage(q.ToString());\n",
-    "\n",
-    "result = await chatcomp.GetChatMessageContentAsync(chathistory,executionsettings,kernel);\n",
-    "//result.Display();\n",
-    "Console.WriteLine(result.Content);\n",
-    "*/\n"
+    "}"
    ]
   },
   {
