--- a/Study/3. Indexing.ipynb
+++ b/Study/3. Indexing.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "41c193ec",
+   "metadata": {},
+   "source": [
+    "When you define a new container, all properties of the data model would be indexed by default.\n",
+    "It is your responsibility to exclude the properties that you don't need an index.\n",
+    "You can disable indexing on a container by passing None to the Indexing Mode."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "314ac3ee",
@@ -13,7 +23,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.49.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.50.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -46,36 +56,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "679f8f5a",
+   "metadata": {},
    "source": [
-    "string sqlQueryText = \"SELECT TOP 10 c.id FROM c WHERE c.Item = 'value1234' AND c.Price > 2\";\n",
+    "Composite Indexes:\n",
+    "ORDER BY clause with two or more properties require a composite index. If you WHERE clauses have many filters, Composite Indexes can help with the performance and efficiency.\n",
     "\n",
-    "QueryDefinition query = new QueryDefinition(sqlQueryText);\n",
-    "var resultSetIterator = postContainer.GetItemQueryIterator<Item>(\n",
-    "                query, requestOptions: new QueryRequestOptions\n",
-    "        {\n",
-    "            PopulateIndexMetrics = true\n",
-    "        });\n",
+    "Spatial Indexes:\n",
+    "They increase the efficiency if you use any GeoSpatial system functions.\n",
     "\n",
-    "    FeedResponse<Item> response = null;\n",
+    "Vector Indexes:\n",
+    "They increase the efficiency if you have vectors and using VectorDistance system function.\n",
     "\n",
-    "    while (resultSetIterator.HasMoreResults)\n",
-    "        {\n",
-    "          response = await resultSetIterator.ReadNextAsync();\n",
-    "          Console.WriteLine(response.IndexMetrics);\n",
-    "        }"
+    "Full Text Indexes:\n",
+    "They enable full text search and scoring efficiently. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1565462c",
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
@@ -107,6 +108,45 @@
     "ContainerResponse containerResponse = await db.GetContainer(\"Posts\").ReadContainerAsync(new ContainerRequestOptions { PopulateQuotaInfo = true });\n",
     "// retrieve the index transformation progress from the result\n",
     "long indexTransformationProgress = long.Parse(containerResponse.Headers[\"x-ms-documentdb-collection-index-transformation-progress\"]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(4,60): error CS0246: The type or namespace name 'Item' could not be found (are you missing a using directive or an assembly reference?)\r\n(4,39): error CS1061: 'ContainerResponse' does not contain a definition for 'GetItemQueryIterator' and no accessible extension method 'GetItemQueryIterator' accepting a first argument of type 'ContainerResponse' could be found (are you missing a using directive or an assembly reference?)\r\n(10,18): error CS0246: The type or namespace name 'Item' could not be found (are you missing a using directive or an assembly reference?)",
+     "output_type": "error",
+     "traceback": [
+      "(4,60): error CS0246: The type or namespace name 'Item' could not be found (are you missing a using directive or an assembly reference?)\r\n",
+      "(4,39): error CS1061: 'ContainerResponse' does not contain a definition for 'GetItemQueryIterator' and no accessible extension method 'GetItemQueryIterator' accepting a first argument of type 'ContainerResponse' could be found (are you missing a using directive or an assembly reference?)\r\n",
+      "(10,18): error CS0246: The type or namespace name 'Item' could not be found (are you missing a using directive or an assembly reference?)"
+     ]
+    }
+   ],
+   "source": [
+    "string sqlQueryText = \"SELECT TOP 10 c.id FROM c WHERE c.Item = 'value1234' AND c.Price > 2\";\n",
+    "\n",
+    "QueryDefinition query = new QueryDefinition(sqlQueryText);\n",
+    "var resultSetIterator = postContainer.GetItemQueryIterator<Item>(\n",
+    "                query, requestOptions: new QueryRequestOptions\n",
+    "        {\n",
+    "            PopulateIndexMetrics = true\n",
+    "        });\n",
+    "\n",
+    "    FeedResponse<Item> response = null;\n",
+    "\n",
+    "    while (resultSetIterator.HasMoreResults)\n",
+    "        {\n",
+    "          response = await resultSetIterator.ReadNextAsync();\n",
+    "          Console.WriteLine(response.IndexMetrics);\n",
+    "        }"
    ]
   },
   {
