--- a/Study/4. CRUD.ipynb
+++ b/Study/4. CRUD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "fb0ff79b",
    "metadata": {
     "polyglot_notebook": {
@@ -13,7 +13,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.48.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.50.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -29,14 +29,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "bd7b296f",
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(2,18): error CS0246: The type or namespace name 'CosmosClient' could not be found (are you missing a using directive or an assembly reference?)",
+     "output_type": "error",
+     "traceback": [
+      "(2,18): error CS0246: The type or namespace name 'CosmosClient' could not be found (are you missing a using directive or an assembly reference?)"
+     ]
+    }
+   ],
    "source": [
     "var cstring = \"AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
     "var client = new CosmosClient(cstring);\n",
@@ -140,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2f7a4d6e",
    "metadata": {
     "polyglot_notebook": {
@@ -211,10 +220,7 @@
     "    results.AddRange(response);\n",
     "    Console.WriteLine($\"Request charge: {response.RequestCharge}\");\n",
     "}\n",
-    "\n",
-    "results[0].Display();\n",
-    "\n",
-    "\n"
+    "results[0].Display();"
    ]
   },
   {
