--- a/Study/6. Indexing Metrics.ipynb
+++ b/Study/6. Indexing Metrics.ipynb
@@ -2,15 +2,101 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9bbca87f",
    "metadata": {
     "polyglot_notebook": {
      "kernelName": "csharp"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Azure.Cosmos, 3.50.0</span></li><li><span>Newtonsoft.Json, 13.0.3</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#r \"nuget: Newtonsoft.Json\"\n",
+    "#r \"nuget: Microsoft.Azure.Cosmos\"\n",
+    "using Microsoft.Azure.Cosmos;\n",
+    "using System.Collections.ObjectModel;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "var endpoint = \"https://localhost:8081\";\n",
+    "var key =\"C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==\";\n",
+    "var client = new CosmosClient(endpoint, key);\n",
+    "var db = client.GetDatabase(\"StackOverflow\");\n",
+    "var postContainer = db.GetContainer(\"Posts\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class Post    \n",
+    "{\n",
+    "    public string id { get; set; }\n",
+    "    public int PostId { get; set; }\n",
+    "    public string PostBody { get; set; }\n",
+    "    public string Title { get; set; }\n",
+    "    public int ViewCount { get; set; }\n",
+    "    public int AnswerCount { get; set; }\n",
+    "    public int CommentCount { get; set; }\n",
+    "    public int FavoriteCount { get; set; }\n",
+    "    public int AcceptedAnswerId { get; set; }\n",
+    "    public DateTime? CreatedOn { get; set; }\n",
+    "    public DateTime? ClosedDate { get; set; }\n",
+    "    public int OwnerUserId { get; set; }\n",
+    "    public string OwnerDisplayName { get; set; }\n",
+    "    public string PostType { get; set; }\n",
+    "    public int Score { get; set; }\n",
+    "    public string Tags { get; set; }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "var cmd = \"SELECT c.PostId FROM c WHERE c.OwnerUserId = 1 AND c.PostType= 'Question'\";\n",
+    "var postQuery = new QueryDefinition(cmd);\n",
+    "var iterator = postContainer.GetItemQueryIterator<Post>(postQuery);\n",
+    "var results = new List<Post>();\n",
+    "\n",
+    "while (iterator.HasMoreResults)\n",
+    "{\n",
+    "    var response = await iterator.ReadNextAsync();    \n",
+    "    results.AddRange(response);\n",
+    "    response.RequestCharge.Display(); // Display the request charge of the response\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
